--- a/Esercitazione00/res/values/strings.xml
+++ b/Esercitazione00/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="app_name">Mattina</string>
-    <string name="hello_world">M\'illumino d\'immenso</string>
+    <string name="text">M\'illumino d\'immenso</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <color name="text">#00BFFF</color>
